Investigación y descripción del SGBD agregado

--- a/tarea1/T1.md
+++ b/tarea1/T1.md
@@ -14,3 +14,11 @@ Campos:
 Todos los datos serán estructurados a exepción de aquellos en el campo usuario, que tendrá su propio registro independiente. El restos sería algo como:
 
 Artistas, Álbumes, Canciones, Géneros
+
+- Investigar diferentes Sistemas de Gestión de Base de Datos, elegir alguno y describirlo.
+
+Decidí estar trabajando con el gestor MySQL con el que ya tengo algo de práctica. En particular, utilizaré el enfoque proporcionado por MySQL Workbench que ofrece una interfaz con herramientas más gráficas para gestionar la BD.
+
+Workbench es una herramienta unificada para desarrolladores de BD que proporciona modelados, desarrollo para crear, ejecutar y optimizar consultas SQL y herramientas de administración integrales para la configuración de un servidor, así como de usuarios y demás funciones integradas en el entorno de MySQL. [1]
+
+[1] MySQL. (s. f.). MySQL Workbench. Recuperado 25 de mayo de 2025, de https://www.mysql.com/products/workbench/
