agregada descripción dentro de tarea1 y establecido md a tarea 2

--- a/tarea1/T1.md
+++ b/tarea1/T1.md
@@ -11,6 +11,12 @@ Campos:
 - Álbumes
 - Géneros
 
+Pienso hacer una relación con alguna tabla extra que funcione como espacio para crear las playlist. De esta forma se puede relacionar Usuario/Playlist/Canción
+
+Mientras que por otro lado se relacionan Artista/Album/Canción
+
+De este modo Canción funciona como una tabla intermedia de relación entre los datos
+
 Todos los datos serán estructurados a exepción de aquellos en el campo usuario, que tendrá su propio registro independiente. El restos sería algo como:
 
 Artistas, Álbumes, Canciones, Géneros
