imagen tarea2 actualizada

--- a/tarea2/T2.md
+++ b/tarea2/T2.md
@@ -3,4 +3,4 @@
 - Muestra el dominio de los atributos
 
 **Base de datos de un reproductor de música online**
-![Diagrama_Entidad_Relacion](BD entidad-relacion.png)
+![Diagrama_Entidad_Relacion]("C:\Users\ruben\Desktop\MCDBD2025\tarea2\BD entidad-relacion.png")
