--- a/tarea3/T3.md
+++ b/tarea3/T3.md
@@ -4,4 +4,4 @@
 - Encuentra cuatro operaciones que vayas a usar en tu base de datos y exprésalas mediante operadores del álgebra relacional. Explica con tus propias palabras cada una de las operaciones
 
 **Base de datos de un reproductor de música online**
-![Diagrama_Entidad_Relacion](BD%20entidad-relacion.png)
+![DiagramaRelacional](BD%20entidad-relacion.png)
