--- a/tarea2/T2.md
+++ b/tarea2/T2.md
@@ -3,4 +3,4 @@
 - Muestra el dominio de los atributos
 
 **Base de datos de un reproductor de música online**
-![Diagrama_Entidad_Relacion](BD%20entidad-relacion.png)
+![Diagrama_Entidad_Relacion](diagrama.png)
