--- a/tarea3/T3.md
+++ b/tarea3/T3.md
@@ -5,3 +5,20 @@
 
 **Base de datos de un reproductor de música online**
 ![DiagramaRelacional](BD%20entidad-relacion.png)
+
+- Operaciones
+Algunas ideas (por mejorar) para establecer operadores entre los campos de las tablas pueden ser los siguientes:
+
+1. Obtener todas las canciones de un álbum
+π_titulo (σ_titulo="Nombre" (Album) X Cancion)
+
+2. Ver las playlists creadas por un usuario específico
+π_nombre (σ_id_usuario="#" (Playlist))
+
+3. Canciones reproducidas por un mismo usuario
+π_titulo (σ_id_usuario="#" (Reproduccion X Cancion))
+
+4. Filtrar artistas con x cantidad de canciones mayores a x cantidad de segundos
+π_nombre (σ_duracion>300 segundos (ejemplo) (Cancion X Album X Artista))
+
+(X representa los joins entre tablas). Ideas por mejorar 
