BD Ejercicio en clase agregada

--- a/tarea4/T4.md
+++ b/tarea4/T4.md
@@ -4,3 +4,5 @@
 - Sube tu archivo de creación de base de datos a tu repositorio con un nombre claro en formato SQL (o equivalente)
 - Tu archivo se ejecuta completamente y sin ningún error en su SGBD correspondiente
 
+**Ejercicio en clase - BD Libros**
+![DiagramaRelacional](BD%20entidad-relacion.png)
