--- a/tarea4/T4.md
+++ b/tarea4/T4.md
@@ -5,4 +5,7 @@
 - Tu archivo se ejecuta completamente y sin ningún error en su SGBD correspondiente
 
 **Ejercicio en clase - BD Libros**
-![DiagramaRelacional](BD%20entidad-relacion.png)
+![DiagramaRelacional](BD libros.sql)
+
+**Base de datos de un reproductor de música online**
+![DiagramaRelacional](BD musica.sql)
