BD musica movida a la carpeta general

--- a/tarea5/T5.md
+++ b/tarea5/T5.md
@@ -2,7 +2,7 @@
 - Agregar datos ficticios o de otras fuentes de manera automática (mediante funciones como las vistas en esta tarea)
 - reportar en menos de 5 minutos hallazgos, dificultades, recomendaciones o recursos que sean relevantes
 
-En este caso, aparte de los registros agregados manualmente tabla por tabla, se realizó el ejercicio
+En este caso, aparte de los registros agregados manualmente tabla por tabla, se realizó el ejercicio de solicitar datos ficticios 
 
 **Base de datos de un reproductor de música online**
 [BD_MUSICA](./BD%20musica.sql)
