--- a/tarea4/T4.md
+++ b/tarea4/T4.md
@@ -8,4 +8,4 @@
 [Ejercicio_Clase](./BD%20libros.sql)
 
 **Base de datos de un reproductor de música online**
-[BD_MUSICA](./BD%20musica.sql)
+[BD_MUSICA](/BD%20musica.sql)
