BD y Tarea 6 actualizados

--- a/tarea6/T6.md
+++ b/tarea6/T6.md
@@ -8,8 +8,10 @@
 - Haz al menos un ejemplo de cada una de estas consultas de estadísticos.
 - Escribe un reporte en Markdown o PDF y súbelo a tu repositorio
 
-
 A continuación se carga el archivo .sql de la BD ya con los ajustes actualizados y consultas agregadas al query.
 **Base de datos de un reproductor de música online**
-[BD_MUSICA](./BD%20musica.sql)
-*Queda pendiente agregar más consultas del tipo de agregación
+[BD_MUSICA](/BD%20musica.sql)
+
+Se tomó como referencia el tipo de consultas vistas en clase, así como una investigación de ejemplos en línea para analizar posibles datos de interés que puedan surgir a partir de esta información en la BD. Por ejemplo viendo estadísticos de servicios como Spotify, Apple Music, etc.
+
+En este caso, la única función de agregación que la tarea pregunta pero que no tomé en cuenta fue el cálculo del cuantil. Aun queda pendiente revisar un poco mejor el cálculo de este estadístico.
