--- a/tarea8/T8.md
+++ b/tarea8/T8.md
@@ -8,7 +8,20 @@
 - Guarda tus consultas como archivo SQL en tu repositorio
 - Exlicar qué hace cada vista y disparador que utilizas y qué beneficios para tu BD tiene crearlos.
 
+## VIEW
+Se creó una vista que muestra las canciones junto con su álbum y artista corresondiente, esto para facilitar la consulta de búsquedas sin necesidad de crear joins individuales.
 
+## VISTA CON LEFT JOIN
+Muestra todos los álbumes, ya sea teniendo o no alguna canción. En el caso de los discos que no tengan canciones guardades, aparece un *NULL*
+
+## VISTA CON RIGHT JOIN
+Se muestran todas las playlist, aún y que no tengan canciones. Muy útil para identificar listas vacías por parte de los usuarios.
+
+# SUBCONSULTA
+A partir de un view, esta subconsulta sirve para visualizar los discos registrados.
+
+# DISPARADOR O TRIGGER
+Fue creado un trigger que permite regristrar automáticamente fechas de creación de playlist, en el caso de que el usuario no lo especifique. Tomando de referencia la fecha por default del sistema que utiliza.
 
 **Base de datos de un reproductor de música online**
 [BD_MUSICA](/BD%20musica.sql)
